--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <header>
         <div class="thetitle">Five In A Row</div>
         <div class="Move">
-            <span id="WhosMove">It's Black</span>
-            <span>'s Move</span>
+            <span>It's </span>
+            <span id="WhosMove">Black's</span>
+            <span> Move</span>
         </div>
     </header>
 
@@ -22,6 +23,9 @@
         <!-- use canvas to draw the chessboard -->
         <div id="container">
             <canvas id="chess" width="400" height="400"></canvas>
+        </div>
+        <div>
+            <button id="restartButton">Play Again</button>
         </div>
     </main>
 
