--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <div id="container">
             <canvas id="chess" width="400" height="400"></canvas>
         </div>
-        <div>
-            <button id="restartButton">Play Again</button>
+        <div class="buttons">
+            <button id="restartButton">New Game</button>
+            <button id="playButton">Play Music</button>
+            <button id="pauseButton">Pause Music</button>
         </div>
     </main>
 
@@ -34,8 +36,17 @@
         </p>
 
         <div class="copyright">Copyright </div>
+        <div class="copyright">Music by: Bensound.com/royalty-free-music
+            License code: EMT2WPV7FNWJMLW2</div>
     </footer>
+
+    <audio id="backgroundMusic" loop>
+        <source src="backgroundMusic.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    
     <script src="Five in a Row Game.js"></script>
+
 </body>
 
 </html>
