--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         </div>
         <div class="buttons">
             <button id="restartButton">New Game</button>
-            <button id="playButton">Play Music</button>
-            <button id="pauseButton">Pause Music</button>
+            <button id="musicButton">Play Music</button>
         </div>
     </main>
 
