--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </main>
 
     <footer>
-        <p class="Thankyou">Thanks to all the teachers and colleagues who have guided me throughout my learning journey.
+        <p class="Thankyou">Thanks to all the teachers and friends who have guided me throughout my learning journey.
         </p>
 
         <div class="copyright">Copyright </div>
