--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Five in a Row Game</title>
     <link rel="stylesheet" href="Five in a Row Game.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&family=Monoton&family=Handjet&family=Barriecito&display=swap">
 </head>
 
 <body>
     <header>
-        <div class="thetitle">Five In A Row</div>
-        <div class="Move">
-            <span>It's </span>
-            <span id="WhosMove">Black's</span>
-            <span> Move</span>
+        <div class="thetitle">FIVE - IN - A - ROW</div>
+        <div>
+            <span class="Move">It's </span>
+            <span id="WhosMove" class="blackMove">Black's</span>
+            <span class="Move"> Move</span>
         </div>
     </header>
 
