--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="thetitle">FIVE - IN - A - ROW</div>
+        <div class="thetitle">FIVE IN A ROW</div>
         <div>
             <span class="Move">It's </span>
             <span id="WhosMove" class="blackMove">Black's</span>
