--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="thetitle">FIVE IN A ROW</div>
-        <div>
+        <div class="Move">
             <span class="Move">It's </span>
             <span id="WhosMove" class="blackMove">Black's</span>
             <span class="Move"> Move</span>
