--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <div class="thetitle">FIVE IN A ROW</div>
         <div class="Move">
-            <span class="Move">It's </span>
+            <span>It's </span>
             <span id="WhosMove" class="blackMove">Black's</span>
-            <span class="Move"> Move</span>
+            <span> Move</span>
         </div>
     </header>
 
